--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,8 @@ layout: default
     </a>
   </div>
   {% endfor %}
-  <div id="nextbutton">
+  <div id="nextbar">
+    <div id="nextbutton"></div>
   </div>
 </div>
 {%include footer.html%}
