--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,10 +3,16 @@ layout: default
 ---
 <div id="description" class="panel home">
   <p>
-    Located somewhere between art and design. Informed by a simple impulse or thought and largely influenced by process and circumstance, the work attempts to present the qualities inherent in an object or material.
+    Located somewhere between art and design. Informed by a simple impulse or
+    thought and largely influenced by process and circumstance, the work
+    attempts to present the qualities inherent in an object or material.
   </p>
   <p>
-    Often humble in origin, the work presents common, everyday objects and materials for reappraisal. There is a forensic quality to their presentation - the materials are never permanently, or irreversibly fixed - the intent being to avoid any sense of contamination and minimise the act of intervention.
+    Often humble in origin, the work presents common, everyday objects and
+    materials for reappraisal. There is a forensic quality to their presentation
+    - the materials are never permanently, or irreversibly fixed - the intent
+    being to avoid any sense of contamination and minimise the act of
+    intervention.
   </p>
 </div>
 <div id="slideshow" class="media home">
@@ -24,8 +30,7 @@ layout: default
     <div id="nextbutton"></div>
   </div>
 </div>
-<div id="indicators">
-</div>
+<div id="indicators"></div>
 {%include footer.html%}
 <script src="/assets/scripts.js"></script>
 <script src="/assets/home.js"></script>
