changing email address

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer-post">
   <h3>
-    <a href="mailto:brendan@twozeroeightthree.com">brendan@twozeroeightthree.com</a>
+    <a href="mailto:brendanemccormick@gmail.com">brendanemccormick@gmail.com</a>
   </h3>
   <ul>
     {% for post in site.posts %}
